--- a/blog/config.toml
+++ b/blog/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://www.crazyrobot.net/"
+baseURL = "http://blog.crazyrobot.net/"
 languageCode = "en-us"
 title = "Crazyrobot Blog"
 theme = "ananke"
